include/Win32/Physics.NewtonImport.hpp

struct TNewtonJointRecord;
struct TNewtonHingeSliderUpdateDesc;
typedef float *PFloat;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
struct DECLSPEC_DRECORD TNewtonJointRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_0;
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_1;
	System::StaticArray<float, 3> m_minLinearDof;
	System::StaticArray<float, 3> m_maxLinearDof;
	System::StaticArray<float, 3> m_minAngularDof;
	System::StaticArray<float, 3> m_maxAngularDof;
	void * *m_attachBody_0;
	void * *m_attachBody_1;
	System::StaticArray<float, 64> m_extraParameters;
	int m_bodiesCollisionOn;
	System::StaticArray<char, 128> m_descriptionType;
};
typedef TNewtonJointRecord *PNewtonJointRecord;
struct DECLSPEC_DRECORD TNewtonHingeSliderUpdateDesc
{
public:
	float m_accel;
	float m_minFriction;
	float m_maxFriction;
	float m_timestep;
};
typedef TNewtonHingeSliderUpdateDesc *PNewtonHingeSliderUpdateDesc;
typedef int __cdecl (*NewtonBodyIterator)(const PNewtonBody body, const void * userData);
typedef NewtonBodyIterator *PNewtonBodyIterator;
typedef void __cdecl (*NewtonJointIterator)(const PNewtonJoint joint, const void * userData);
typedef NewtonJointIterator *PNewtonJointIterator;
typedef void __cdecl (*NewtonCollisionIterator)(const void * userData, int vertexCount, const PFloat faceArray, int faceId);
typedef NewtonCollisionIterator *PNewtonCollisionIterator;
typedef void __cdecl (*NewtonBallCallback)(const PNewtonJoint ball, float timestep);
typedef NewtonBallCallback *PNewtonBallCallback;
typedef unsigned __cdecl (*NewtonHingeCallback)(const PNewtonJoint hinge, const PNewtonHingeSliderUpdateDesc desc);
typedef NewtonHingeCallback *PNewtonHingeCallback;
typedef unsigned __cdecl (*NewtonSliderCallback)(const PNewtonJoint slider, const PNewtonHingeSliderUpdateDesc desc);
typedef NewtonSliderCallback *PNewtonSliderCallback;
typedef unsigned __cdecl (*NewtonUniversalCallback)(const PNewtonJoint universal, const PNewtonHingeSliderUpdateDesc desc);
typedef NewtonUniversalCallback *PNewtonUniversalCallback;
typedef unsigned __cdecl (*NewtonCorkscrewCallback)(const PNewtonJoint corkscrew, const PNewtonHingeSliderUpdateDesc desc);
typedef NewtonCorkscrewCallback *PNewtonCorkscrewCallback;
typedef void __cdecl (*NewtonUserBilateralCallback)(const PNewtonJoint userJoint, float timestep, int threadIndex);
typedef NewtonUserBilateralCallback *PNewtonUserBilateralCallback;
typedef void __cdecl (*NewtonUserBilateralGetInfoCallback)(const PNewtonJoint userJoint, const PNewtonJointRecord info);
typedef NewtonUserBilateralGetInfoCallback *PNewtonUserBilateralGetInfoCallback;
typedef void __cdecl (*NewtonConstraintDestructor)(const PNewtonJoint me);
typedef NewtonConstraintDestructor *PNewtonConstraintDestructor;
typedef void __cdecl (*NewtonJobTask)(const PNewtonWorld world, const void * userData, int threadIndex);
typedef NewtonJobTask *PNewtonJobTask;
typedef int __cdecl (*NewtonReportProgress)(float normalizedProgressPercent, const void * userData);
typedef NewtonReportProgress *PNewtonReportProgress;