external/Newton/Source/NGD.NewtonImport.pas


NewtonBodyIterator = function(const body: pNewtonBody; const userData: Pointer): Integer; cdecl;
PNewtonBodyIterator = ^NewtonBodyIterator;

NewtonJointIterator = procedure(const joint: PNewtonJoint; const userData: Pointer); cdecl;
PNewtonJointIterator = ^NewtonJointIterator;

NewtonCollisionIterator = procedure(const userData: Pointer; vertexCount: Integer; const faceArray: pfloat; faceId: Integer); cdecl;
PNewtonCollisionIterator = ^NewtonCollisionIterator;

NewtonBallCallback = procedure(const ball: PNewtonJoint; timestep: dfloat); cdecl;
PNewtonBallCallback = ^NewtonBallCallback;

NewtonHingeCallback = function(const hinge: PNewtonJoint; const desc: PNewtonHingeSliderUpdateDesc): LongWord; cdecl;
PNewtonHingeCallback = ^NewtonHingeCallback;

NewtonSliderCallback = function(const slider: PNewtonJoint; const desc: PNewtonHingeSliderUpdateDesc): LongWord; cdecl;
PNewtonSliderCallback = ^NewtonSliderCallback;

NewtonUniversalCallback = function(const universal: PNewtonJoint; const desc: PNewtonHingeSliderUpdateDesc): LongWord; cdecl;
PNewtonUniversalCallback = ^NewtonUniversalCallback;

NewtonCorkscrewCallback = function(const corkscrew: PNewtonJoint; const desc: PNewtonHingeSliderUpdateDesc): LongWord; cdecl;
PNewtonCorkscrewCallback = ^NewtonCorkscrewCallback;

NewtonUserBilateralCallback = procedure(const userJoint: PNewtonJoint; timestep: dfloat; threadIndex: Integer); cdecl;
PNewtonUserBilateralCallback = ^NewtonUserBilateralCallback;

NewtonUserBilateralGetInfoCallback = procedure(const userJoint: PNewtonJoint; const info: PNewtonJointRecord); cdecl;
PNewtonUserBilateralGetInfoCallback = ^NewtonUserBilateralGetInfoCallback;

NewtonConstraintDestructor = procedure(const me: PNewtonJoint); cdecl;
PNewtonConstraintDestructor = ^NewtonConstraintDestructor;

NewtonJobTask = procedure(const world: PNewtonWorld; const userData: Pointer; threadIndex: Integer); cdecl;
PNewtonJobTask = ^NewtonJobTask;

NewtonReportProgress = function(normalizedProgressPercent: dfloat; const userData: Pointer): Integer; cdecl;
PNewtonReportProgress = ^NewtonReportProgress;
